# adv_diff

./: .gitignore  CMakeLists.txt  Makefile
src/: IO.hpp  Mesh.hpp  Solvers1D.hpp  main.cpp
support/: UpwindResolucao.py
tests/: test_1D.cpp
